# google_trend

./: README.md  google_trend.ipynb  pyproject.toml  sp500.py  trend_stock.py
.claude/: settings.local.json
.github/workflows/: ci.yml  daily_trend.yml
tests/: test_sp500.py  test_trend_stock.py
